feature():create initial migration and definition app config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=pruebatecnica
+
+# R2DBC
+spring.r2dbc.url=r2dbc:postgresql://ep-calm-haze-a5nob7p4-pooler.us-east-2.aws.neon.tech/neondb?sslMode=require
+spring.r2dbc.username=neondb_owner
+spring.r2dbc.password=npg_f3gDKA8YeLOx
+
+spring.r2dbc.pool.initial-size=5
+spring.r2dbc.pool.max-size=20
+spring.r2dbc.pool.max-idle-time=30m
+
+spring.webflux.base-path=/api
+
+logging.level.io.r2dbc.postgresql=DEBUG
+logging.level.org.springframework.r2dbc.core=DEBUG
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.url=jdbc:postgresql://ep-calm-haze-a5nob7p4-pooler.us-east-2.aws.neon.tech/neondb
+spring.flyway.user=neondb_owner
+spring.flyway.password=npg_f3gDKA8YeLOx
+
+# Puerto
+server.port=8080
