--- a/build.gradle
+++ b/build.gradle
@@ -24,23 +24,37 @@ repositories {
 }
 
 dependencies {
+    // WebFlux + R2DBC
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-    implementation 'io.r2dbc:r2dbc-postgresql'
+    implementation 'org.postgresql:r2dbc-postgresql:1.0.7.RELEASE'
+
+    // Validación
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // Flyway Core + PostgreSQL support
+    implementation 'org.flywaydb:flyway-core:11.8.2'
+    implementation 'org.flywaydb:flyway-database-postgresql:11.8.2'
+
+    // JDBC (necesario para Flyway)
+    implementation 'org.springframework:spring-jdbc'
+    runtimeOnly   'org.postgresql:postgresql:42.6.0'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // MapStruct
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
     // DevTools y Docker Compose
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
-    // Tests
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.projectreactor:reactor-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // Testing
+    testImplementation     'org.springframework.boot:spring-boot-starter-test'
+    testImplementation     'io.projectreactor:reactor-test'
+    testRuntimeOnly        'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
