--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,9 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
-    // DevTools y Docker Compose
+    // DevTools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.3'
 
     // Testing
     testImplementation     'org.springframework.boot:spring-boot-starter-test'
